namespace DanskeBank.Guard;

public interface IGuard { }
